--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
       <h1 class="title">Vero Wealth Management</h1>
       <h2 class="sub-title">This website is under development</h2>
       <p class="inquiries">
-        Contact details coming soon.
+        For any enquiries, please contact:
       </p>
       <p class="contact">
+        info@vero-foundation.com
       </p>
     </section>
   </main>
